# BuildLens

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
ai-worker/: Dockerfile  README.md  pyproject.toml
ai-worker/src/buildlens_ai/: __init__.py  config.py  context.py  database.py  errors.py  events.py  llm.py  main.py  models.py  processor.py  rabbit.py  redaction.py  runtime.py  scheduler.py
ai-worker/tests/: test_config.py  test_events.py  test_grounding.py  test_llm.py  test_redaction.py
analytics/: Dockerfile  README.md  pom.xml
analytics/src/main/java/dev/buildlens/analytics/: AnalyticsApplication.java
analytics/src/main/java/dev/buildlens/analytics/messaging/: AnalyticsEventListener.java  EventEnvelope.java  EventPolicy.java  FatalEventException.java  RabbitTopology.java
analytics/src/main/java/dev/buildlens/analytics/metrics/: AnalyticsCoordinator.java  BuildScoreService.java  DoraService.java  FlakyTestService.java  Granularity.java  MetricMath.java  RepositoryScoreService.java  ScheduledRecompute.java
analytics/src/main/java/dev/buildlens/analytics/persistence/: BuildScoreEntity.java  DoraMetricEntity.java  FlakyTestEntity.java  RepositoryScoreEntity.java
analytics/src/main/resources/: application.yml
analytics/src/test/java/dev/buildlens/analytics/messaging/: EventPolicyTest.java
analytics/src/test/java/dev/buildlens/analytics/metrics/: GranularityTest.java  MetricMathTest.java
analytics/src/test/resources/: application.yml
contracts/: README.md  deployment.recorded.json  workflow_run.completed.json
deploy/: Caddyfile  DEPLOY.md  RAILWAY.md  deploy.sh  docker-compose.prod.yml
deploy/railway/: migrator.Dockerfile  minio-init.Dockerfile  postgres.Dockerfile
docs/: phases.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/organizations/[organizationId]/: error.tsx  layout.tsx  loading.tsx
frontend/src/app/organizations/[organizationId]/ai-inbox/: page.tsx
frontend/src/app/organizations/[organizationId]/dora/: page.tsx
frontend/src/app/organizations/[organizationId]/flaky-tests/: page.tsx
frontend/src/app/organizations/[organizationId]/overview/: page.tsx
frontend/src/app/organizations/[organizationId]/repositories/: page.tsx
frontend/src/app/organizations/[organizationId]/repositories/[repositoryId]/: page.tsx
frontend/src/app/organizations/[organizationId]/runs/: page.tsx
frontend/src/app/organizations/[organizationId]/runs/[runId]/: page.tsx
frontend/src/app/organizations/[organizationId]/settings/: page.tsx
frontend/src/components/: app-shell.tsx  repository-tracking.tsx  ui.tsx
frontend/src/lib/: actions.ts  api.ts  format.ts  types.ts
gateway/: .dockerignore  Cargo.toml  Dockerfile
gateway/src/: audit.rs  auth.rs  config.rs  crypto.rs  error.rs  events.rs  github.rs  github_api.rs  github_app.rs  installations.rs  junit.rs  logs.rs  main.rs  relay.rs  repository_sync.rs  sessions.rs  state.rs  webhooks.rs  workflow_ingest.rs
gateway/src/routes/: api_tokens.rs  auth.rs  dashboard.rs  health.rs  me.rs  mod.rs  organizations.rs  repositories.rs
infra/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_identity.down.sql  000002_identity.up.sql  000003_repositories.down.sql  000003_repositories.up.sql  000004_workflows.down.sql  000004_workflows.up.sql  000005_deployments_tests.down.sql  000005_deployments_tests.up.sql  000006_analytics.down.sql  000006_analytics.up.sql  000007_ai.down.sql  000007_ai.up.sql  000008_platform.down.sql  000008_platform.up.sql  000009_ingestion.down.sql  000009_ingestion.up.sql  000010_grants.down.sql  000010_grants.up.sql  000011_phase2_foundation.down.sql  000011_phase2_foundation.up.sql  000012_phase6_ai_event_receipts.down.sql  000012_phase6_ai_event_receipts.up.sql  000013_github_app.down.sql  000013_github_app.up.sql
infra/minio/: bootstrap.sh
infra/postgres/init/: 01-roles.sh
infra/rabbitmq/: README.md
