[project]
name = "buildlens-ai-worker"
version = "0.1.0"
description = "Grounded AI build reports and recommendations for BuildLens"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aio-pika>=9.5.7",
    "anthropic>=0.75.0",
    "asyncpg>=0.30.0",
    "boto3>=1.40.0",
    "fastapi>=0.116.0",
    "pydantic-settings>=2.10.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buildlens_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
