[package]
name = "buildlens-gateway"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
aes-gcm = "0.10.3"
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
getrandom = "0.3.4"
redis = { version = "1.4.0", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
# Deliberately no "macros" feature. sqlx::query! validates SQL against a live
# database at COMPILE time, which would make `cargo build` require a running
# Postgres (or a checked-in .sqlx cache that goes stale silently). We use the
# runtime query API instead, so the build stays hermetic. Revisit in Phase 2 if
# compile-time checking starts earning its keep.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace", "request-id", "util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.22.0", features = ["serde", "v7"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
